# EastLang

./: .gitignore  CMakeLists.txt  Cargo.toml  main.cpp  util.cpp  util.hpp
.github/workflows/: build.yml
docs/: built-in_functions.md  built-in_modules.md  main.md
interpretation/: Environment.cpp  Environment.hpp  GlobalEnv.cpp  ValueTypes.hpp  interpreter.cpp  interpreter.hpp
interpretation/modules/array/: arrayModule.cpp  arrayModule.hpp
parsing/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/: Errors.cpp  Errors.hpp  ast_types.rs  errors.rs  lexer.rs  lexer_types.rs  main.cpp  main.rs  parser.rs  util.cpp  util.hpp
src/interpretation/: Environment.hpp  GlobalEnv.cpp  GlobalEnv.hpp  ValueTypes.hpp  interpreter.cpp  interpreter.hpp
src/interpretation/modules/: main.cpp  main.hpp
src/interpretation/modules/array/: arrayModule.cpp
src/interpretation/modules/regex/: regexModule.cpp  regexModule.hpp
src/parsing/: ast.hpp  lexer.cpp  parser.cpp
